# polkit-qt-1

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Mainpage.dox  Messages.sh  PolkitQt-1Config.cmake.in  PolkitQt1.files  PolkitQt1.includes  QPkActionButton.cpp  QPkActionButton.h  README  README.porting  TODO  action.cpp  action.h  actionbutton.cpp  actionbutton.h  actionbutton_p.h  actionbuttons.cpp  actionbuttons.h  actionbuttons_p.h  auth.cpp  auth.h  authority.cpp  authority.h  context.cpp  context.h  details.cpp  details.h  export.h  identity.cpp  identity.h  listener.cpp  listener.h  listeneradapter.cpp  (+37 more)
agent/: CMakeLists.txt  listener.cpp  listener.h  listeneradapter.cpp  listeneradapter.h  listeneradapter_p.h  polkitqt1-agent-listener.cpp  polkitqt1-agent-listener.h  polkitqt1-agent-session.cpp  polkitqt1-agent-session.h  polkitqtlistener.cpp  polkitqtlistener.h  polkitqtlistener_p.h  session.cpp  session.h
cmake/modules/: CMakeLists.txt  FindGIO.cmake  FindGLIB2.cmake  FindGLib2.cmake  FindGObject.cmake  FindPolkit.cmake  FindPolkitQt-1.cmake  FindPolkitQt.cmake  FindPolkitQt1.cmake  FindQPolicyKit.cmake  InstallSettings.cmake  PolkitQt-1Dist.cmake
core/: CMakeLists.txt  actiondescription.cpp  actiondescription.h  authority.cpp  authority.h  details.cpp  details.h  identity.cpp  identity.h  polkitqt1-actiondescription.cpp  polkitqt1-actiondescription.h  polkitqt1-authority.cpp  polkitqt1-authority.h  polkitqt1-details.cpp  polkitqt1-details.h  polkitqt1-details_p.h  polkitqt1-identity.cpp  polkitqt1-identity.h  polkitqt1-subject.cpp  polkitqt1-subject.h  polkitqt1-temporaryauthorization.cpp  polkitqt1-temporaryauthorization.h  subject.cpp  subject.h  temporaryauthorization.cpp  temporaryauthorization.h
examples/: CMakeLists.txt  PkExample.cpp  PkExample.h  PkExample.ui  PkExampleHelper.cpp  PkExampleHelper.h  main.cpp  mainHelper.cpp  org.qt.policykit.examples.conf  org.qt.policykit.examples.policy  org.qt.policykit.examples.policy.in  org.qt.policykit.examples.service  org.qt.policykit.examples.service.in  org.qt.policykit.examples.xml
examples/agent/: CMakeLists.txt  klistener.cpp  klistener.h  main.cpp  pkagentexample.cpp  pkagentexample.h
examples/icons/: icons.qrc
gui/: CMakeLists.txt  action.cpp  action.h  actionbutton.cpp  actionbutton.h  actionbutton_p.h  actionbuttons.cpp  actionbuttons.h  actionbuttons_p.h  polkitqt1-gui-action.cpp  polkitqt1-gui-action.h  polkitqt1-gui-actionbutton.cpp  polkitqt1-gui-actionbutton.h  polkitqt1-gui-actionbutton_p.h  polkitqt1-gui-actionbuttons.cpp  polkitqt1-gui-actionbuttons.h  polkitqt1-gui-actionbuttons_p.h
includes/: Action  ActionButton  ActionButtons  Auth  Context  Identity  Subject  TemporaryAuthorization
includes/PolkitQt/: ActionButton  ActionDescription  Authority  Details  Identity  TemporaryAuthorization
includes/PolkitQt1/: ActionButtons  ActionDescription  Authority  Details  Identity  Subject  TemporaryAuthorization
includes/PolkitQt1/Agent/: Listener  Session
includes/PolkitQt1/Gui/: Action  ActionButton  ActionButtons
includes/PolkitQtAgent/: Listener  Session
modules/: CMakeLists.txt  FindQPolicyKit.cmake
test/: CMakeLists.txt  test.cpp  test.h
